[gd_scene load_steps=16 format=2]

[ext_resource path="res://DarkLord.png" type="Texture" id=1]
[ext_resource path="res://Jeremy/EnemyDarkLord.gd" type="Script" id=2]
[ext_resource path="res://Miriya/Healthbar/HealthBar.tscn" type="PackedScene" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 64, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "armreach",
"speed": 8.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "earth",
"speed": 8.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "fire",
"speed": 8.0
}, {
"frames": [ SubResource( 9 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 6.45115, 12.6244 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 7.23068, 14.7777 )

[node name="EnemyDarkLord" type="KinematicBody2D"]
scale = Vector2( 8, 8 )
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 10 )
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0.471936, 2.65465 )
shape = SubResource( 11 )

[node name="HealthBar" parent="." instance=ExtResource( 3 )]
margin_top = -22.1686
margin_bottom = 17.8314
rect_scale = Vector2( 0.02, 0.03 )

[node name="Area2D" type="Area2D" parent="."]

[node name="DarkAura" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0.595276, 1.98425 )
shape = SubResource( 12 )
[connection signal="update_health" from="." to="." method="_on_EnemyDarkLord_update_health"]
[connection signal="update_max_health" from="." to="." method="_on_EnemyDarkLord_update_max_health"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
